--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "antd": "^4.5.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "history": "^5.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.4.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.10"
