--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "swr": "^0.3.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
