--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.0.13",
     "history": "^5.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.4.2",
