--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "antd": "^4.5.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
