--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "antd": "^4.5.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
