--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.10",
     "swr": "^0.3.1"
